Fix for Bug 310891 - gwenview crashed during rotate image

BUG: 310891
REVIEW: 107667
FIXED-IN: 4.10.0